--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,11 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts","src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
