--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
     "axios": "^0.27.2",
-    "md-editor-v3": "^2.2.1",
-    "vue-cropperjs": "^5.0.0",
-    "vue-schart": "^2.0.0",
-    "wangeditor": "^4.7.15",
-    "xlsx": "^0.18.5",
     "element-plus": "^2.3.8",
+    "md-editor-v3": "^2.2.1",
     "pinia": "^2.1.3",
     "sass": "^1.65.1",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-cropperjs": "^5.0.0",
+    "vue-router": "^4.2.2",
+    "vue-schart": "^2.0.0",
+    "wangeditor": "^4.7.15",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
     "@vitejs/plugin-vue": "^3.0.0",
     "@vue/compiler-sfc": "^3.1.2",
+    "@vue/tsconfig": "^0.4.0",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.4",
