--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.9",
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^0.27.2",
     "element-plus": "^2.3.8",
-    "md-editor-v3": "^2.2.1",
+    "md-editor-v3": "^4.4.0",
     "pinia": "^2.1.3",
-    "sass": "^1.65.1",
+    "sass": "^1.66.1",
+    "text-loader": "^0.0.1",
     "vue": "^3.3.4",
     "vue-cropperjs": "^5.0.0",
     "vue-router": "^4.2.2",
@@ -27,7 +28,7 @@
     "@vue/compiler-sfc": "^3.1.2",
     "@vue/tsconfig": "^0.4.0",
     "typescript": "^4.6.4",
-    "unplugin-auto-import": "^0.11.2",
+    "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
